#COUP-77 Added redux, api calls and fixed css classNames - Fixed broken css names class -> className inside Header divs - Added api calls in the reducer - ExpiringCoupons - Added the new reducer to combinedReducers in index of redux/reducers - Linked DisplayCoupons with data from apis through reducers for gasRewards - Refactored header classes and updated css

--- a/src/components/DisplayCouponComponent/DisplayCoupons.css
+++ b/src/components/DisplayCouponComponent/DisplayCoupons.css
@@ -286,6 +286,7 @@ h6.viewMore{
 
 .WelcomeUser_Logout {
     display: flex;
+    flex: 1;
     justify-content: flex-end;
     margin-right: 20px;
     margin-bottom: 0;
